Fix dialog getting cut off on small screens

--- a/packages/core/src/components/exam/Exam.less
+++ b/packages/core/src/components/exam/Exam.less
@@ -56,6 +56,7 @@
       margin-left: ~'max(2.5rem, (100vw - 63rem)/2)';
       margin-right: ~'max(2.5rem, (100vw - 63rem)/2)';
       transition: padding 0.3s 0.05s;
+      max-height: 100vh;
       height: 100vh;
       width: auto;
       border: none;
